tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:20:13 --------------------------------------
20 |  usingFile: f => // error
   |             ^
   |Found:    (f: File^'s1) ->{cur} Unit
   |Required: File^ => Unit
   |
   |Note that capability cap is not included in capture set {C}.
   |
   |where:    =>  refers to a fresh root capability created in method runAll0 when checking argument to parameter f of method usingFile
   |          ^   refers to the universal root capability
   |          cap is a fresh root capability created in anonymous function of type (f: File^'s1): Unit of parameter parameter f² of method $anonfun
   |
21 |    cur = (() => f.write()) :: Nil
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:30:13 --------------------------------------
30 |  usingFile: f => // error
   |             ^
   |Found:    (f: File^'s2) ->{cur} Unit
   |Required: File^ => Unit
   |
   |Note that capability cap cannot be included in capture set {C} of value cur.
   |
   |where:    =>  refers to a fresh root capability created in method runAll1 when checking argument to parameter f of method usingFile
   |          ^   refers to the universal root capability
   |          cap is a fresh root capability created in anonymous function of type (f: File^'s2): Unit of parameter parameter f² of method $anonfun
   |
31 |    cur.set:
32 |      (() => f.write()) :: Nil
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:52:27 --------------------------------------
52 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^
   |                           Found:    Id[() => Unit, () -> Unit]^'s3
   |                           Required: Id[() =>² Unit, () =>³ Unit]
   |
   |                           Note that capability cap is not included in capture set {cap²}
   |                           because cap is not visible from cap² in value id.
   |
   |                           where:    => and cap² refer to a fresh root capability created in value id
   |                                     =>² and cap refer to the universal root capability
   |                                     =>³         refers to a fresh root capability in the type of value id
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:57:27 --------------------------------------
57 |  val id: File^ -> File^ = x => x // error
   |                           ^^^^^^
   |          Found:    (x: File^) ->'s4 File^²
   |          Required: File^ -> File^³
   |
   |          Note that capability cap is not included in capture set {cap²}
   |          because cap is not visible from cap² in value id.
   |
   |          where:    ^           refers to the universal root capability
   |                    ^² and cap  refer to a root capability associated with the result type of (x: File^): File^²
   |                    ^³ and cap² refer to a fresh root capability in the type of value id
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:68:27 --------------------------------------
68 |    val f1: File^{id*} = id(f)   // error
   |                         ^^^^^
   |Found:    File^
   |Required: File^{id*}
   |
   |Note that capability cap is not included in capture set {id*}.
   |
   |where:    ^ and cap refer to a fresh root capability created in value f1 when instantiating method apply's type (x: File^²): File^³
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:85:10 --------------------------------------
85 |  ps.map((x, y) => compose1(x, y)) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (x$1: (A^ ->'s5 A^'s6, A^ ->'s7 A^'s8)^'s9) ->'s10 A^'s11 ->'s12 A^'s13
   |Required: ((A ->{ps*} A, A ->{ps*} A)) => A^'s14 ->'s15 A^'s16
   |
   |Note that capability ps* cannot be included in capture set {} of value x.
   |
   |where:    => refers to a fresh root capability created in method mapCompose when checking argument to parameter f of method map
   |          ^  refers to the universal root capability
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:88:10 --------------------------------------
88 |  ps.map((x, y) => compose1(x, y)) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (x$1: (A^ ->'s17 A^'s18, A^ ->'s19 A^'s20)^'s21) ->'s22 A^'s23 ->'s24 A^'s25
   |Required: ((A ->{C} A, A ->{C} A)) => A^'s26 ->'s27 A^'s28
   |
   |Note that capability C cannot be included in capture set {} of value x.
   |
   |where:    => refers to a fresh root capability created in method mapCompose2 when checking argument to parameter f of method map
   |          ^  refers to the universal root capability
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:37:31 -----------------------------------------------------------
37 |    val next: () => Unit = cur.head   // error, use
   |                           ^^^^^^^^
   |                           Local reach capability xs* leaks into capture scope of method runAll2.
   |                           You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:44:35 -----------------------------------------------------------
44 |    val next: () => Unit = cur.get.head // error // error
   |                           ^^^^^^^^^^^^
   |                           Local reach capability xs* leaks into capture scope of method runAll3.
   |                           You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:60:36 -----------------------------------------------------------
60 |  val leaked = usingFile[File^{id*}]: f => // error: separation
   |               ^
   |        Local cap created in type of parameter x leaks into capture scope of an enclosing function
   |
   |        where:    cap is a fresh root capability created in value id of parameter parameter x of method $anonfun
   |
61 |    val f1: File^{id*} = id(f)
62 |    f1
-- Error: tests/neg-custom-args/captures/reaches.scala:42:9 ------------------------------------------------------------
42 |  val cur = Ref[List[Proc]](xs) // error
   |         ^
   |         Separation failure: value cur's inferred type Ref[List[() => Unit]^{}]^ hides parameter xs.
   |         The parameter needs to be annotated with consume to allow this.
-- Error: tests/neg-custom-args/captures/reaches.scala:44:17 -----------------------------------------------------------
44 |    val next: () => Unit = cur.get.head // error // error
   |              ^^^^^^^^^^
   |              Separation failure: value next's type () => Unit hides parameter xs.
   |              The parameter needs to be annotated with consume to allow this.
